fixed the gaps in part 3

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@
 #grid-section1 .grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(auto-fill, 100px);
+    grid-auto-rows: 100px;
     gap: 20px;
 }
 
@@ -104,6 +104,7 @@
 
 #grid-section3 .box1 {
     grid-column: 1 / 3;
+    grid-row: 1 / 2;
 }
 
 #grid-section3 .box2 {
@@ -118,6 +119,7 @@
 
 #grid-section3 .box4 {
     grid-column: 1 / 3;
+    grid-row: 3 / 4;
 }
 
 /* end Grid Part 3 */
